--- a/style.css
+++ b/style.css
@@ -2,9 +2,15 @@ h1 {
     text-align: center;
     font-size: 50px;
     color: black;
+    background-color: rgb(238, 255, 0);
     border: 1rem solid black;
 }
 
 li {
     color: lightblue;
+}
+
+a {
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
 }
